[gd_scene load_steps=9 format=3 uid="uid://cqdnvlyr08dp5"]

[ext_resource type="Script" path="res://Scenes/game_manager.gd" id="1_aehoi"]
[ext_resource type="PackedScene" uid="uid://dff6k1qobyv1p" path="res://Scenes/microbePlayer1.tscn" id="1_ebnpy"]
[ext_resource type="Script" path="res://Scenes/spawn_manager.gd" id="1_g7cea"]
[ext_resource type="PackedScene" uid="uid://cud07wc4uwvjp" path="res://Scenes/chunk_manager.tscn" id="3_dt666"]
[ext_resource type="Texture2D" uid="uid://cio613vb2wutf" path="res://Image & Music/microbe_tile_set.png" id="3_f0e57"]
[ext_resource type="Script" path="res://Scenes/camera_2d.gd" id="4_tpuux"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ok6ny"]
texture = ExtResource("3_f0e57")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_icrsg"]
sources/0 = SubResource("TileSetAtlasSource_ok6ny")

[node name="gameManager" type="Node2D"]
script = ExtResource("1_aehoi")

[node name="spawnManager" type="Node2D" parent="."]
script = ExtResource("1_g7cea")

[node name="spawnTimer" type="Timer" parent="spawnManager"]
autostart = true

[node name="chunkManager" parent="." node_paths=PackedStringArray("tilemap") instance=ExtResource("3_dt666")]
tilemap = NodePath("../TileMap")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
tile_set = SubResource("TileSet_icrsg")
format = 2

[node name="playerMicrobe" parent="." instance=ExtResource("1_ebnpy")]
position = Vector2(116, 85)

[node name="Camera2D" type="Camera2D" parent="playerMicrobe"]
position_smoothing_enabled = true
script = ExtResource("4_tpuux")

[node name="rightSpawn" type="Marker2D" parent="playerMicrobe/Camera2D" groups=["spawnpoint"]]
position = Vector2(1000, 0)

[node name="topSpawn" type="Marker2D" parent="playerMicrobe/Camera2D" groups=["spawnpoint"]]
position = Vector2(0, -803)

[node name="botSpawn" type="Marker2D" parent="playerMicrobe/Camera2D" groups=["spawnpoint"]]
position = Vector2(0, 800)

[node name="leftSpawn" type="Marker2D" parent="playerMicrobe/Camera2D" groups=["spawnpoint"]]
position = Vector2(-1000, 0)

[connection signal="timeout" from="spawnManager/spawnTimer" to="spawnManager" method="_on_spawn_timer_timeout"]
